# Boni-Py

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  configuration.py  createVC.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  sample.env
behaviors/: activities.py  adminCommands.py  clubMatches.py  cog.py  copyCat.py  createVC.py  exp.py  getGuilds.py  help.py  newSeason.py  rewardRemover.py  room.py  sample.env  slamberParty.py  stats.py  voiceActivities.py  welcome.py  xp.py
boni/: __init__.py
boni/cogs/: birthdays.py  rooms.py
boni/db/: __init__.py
boni/db/models/: __init__.py  birthdays.py  rooms.py
boni/extensions/: admin.py  birthdays.py  destiny.py  rocket_league.py  rooms.py
boni/utils/: __init__.py  birthday_messages.json  birthdays.py  config.py  logging.py  rocket_league.py  rooms.py
database/: statsdb.py  user_exp.py  user_xp.py  voiceVCs.py
migrations/: 20210325_01_Xdj8F-initial.py  20210403_01_ReNbu-better-db.py
