[tool.poetry]
name = "boni-py"
version = "0.1.0"
description = "Boni is a discord bot for the SLambonis server."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
beanie = "^1.11.0"
beautifulsoup4 = "^4.11.1"
python-dateutil = "^2.8.2"
# To force update to latest
# "poetry add git+https://github.com/NAFTeam/NAFF.git@dev"
naff = {git = "https://github.com/NAFTeam/NAFF.git", rev = "dev"}
orjson = "^3.8.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
