[tool.poetry]
name = "boni-py"
version = "0.1.0"
authors = ["Wolfhound905 <aiden8green@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
beanie = "^1.11.0"
# To force update to latest
# "poetry add git+https://github.com/NAFTeam/NAFF.git@dev"
naff = {git = "https://github.com/NAFTeam/NAFF.git", rev = "dev"}
orjson = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
